--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+  h1 {
+     @apply text-4xl font-bold mb-5;
+  }
+}
